# LoomFinder-3.0

./: .gitignore  README.md  config.example.toml  config.toml  install.sh  pyproject.toml  requirements.txt
loomfinder/: __init__.py  borrow.py  categories.py  convert_cookies.py  login.py  main.py  ocr.py  parsing.py  queries.py  random_selection.py  tiers.py  utilities.py
tests/: test_parsing.py  test_queries.py  test_random_selection.py
