[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loomfinder"
version = "3.0.0"
description = "Retrieve random snippets from books hosted on the Internet Archive"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "internetarchive>=4.0.0",
    "aiohttp>=3.9.0",
    "rich>=13.0.0",
    "diskcache>=5.6.0",
    "Pillow>=10.0.0",
    "tesserocr>=2.10.0",
    "playwright>=1.50.0",
]

[tool.setuptools.packages.find]
include = ["loomfinder*"]

[project.scripts]
loomfinder = "loomfinder.main:cli"
